Begin decode L2CAP